SJ-5757, SJ-2588, SJ-2731 Fixed. Content overflow issues, modals issues.

--- a/core/sj-frontend/src/client/css/main.css
+++ b/core/sj-frontend/src/client/css/main.css
@@ -59,3 +59,7 @@ label.required::after {
   margin-left: 10px;
   margin-top: 8px;
 }
+
+.table-wrapper, .overflow-x-scroll {
+  overflow-x: scroll;
+}
